# vibescan

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AUTOMATION.md  CHANGELOG.md  DEPLOYMENT.md  DETAILED_PROJECT_REPORT.md  Dockerfile  INDEX.md  LICENSE  MANIFEST.in  PRD.md  PRESENTATION_GUIDE.md  PROJECT_INDEX.md  PROJECT_REPORT.md  PROJECT_SUMMARY.md  Procfile  QUICKSTART.md  README.md  STREAMLIT_DEPLOY.md  STUDENT_GUIDE.md  app.json  docker-compose.yml  fix_quotes.py  fly.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt  setup.py  streamlit_app.py  verify.py
.github/: DEPLOYMENT_SECRETS.md
.github/workflows/: auto-update.yml  deploy-docs.yml  deploy-packages.yml  deploy-streamlit.yml  deploy-web.yml  publish.yml  security-scan.yml  tests.yml  vibescan.yml
.streamlit/: config.toml
docs/: README.md  get-started.html  getting-started.html  index.html  styles.css
docs/Proper doc/: CODE_EXPLANATION.md  RUNNING.md
docs/documentation/: CODE_EXPLANATION.md  README.md  USAGE.md
docs/guides/: CLI_USAGE_GUIDE.md
docs/reports/: REPORT_GENERATION.md
docs/testing/: TESTING_OVERVIEW.md
dummy_project/: package.json  requirements.txt
examples/node-demo-app/: README.md  SCAN_RESULTS.md  package.json  server.js
examples/node-demo-app/public/: index.html
examples/test-app/: QUICKSTART.md  README.md  SCAN_RESULTS.md  app.py  package.json  requirements.txt
examples/test-app/templates/: index.html
js-wrapper/: .npmignore  README.md  index.js  package.json
scripts/: generate_all_reports.py
tests/: test_checkers.py  test_parsers.py  test_scorer.py
vibescan/: cli.py  detailed_report.py  parsers.py  pdf_report.py  reporter.py  scorer.py
vibescan/checkers/: registry_checker.py  typosquat_checker.py
web/: README.md  app.py
web/templates/: index.html  landing.html
(+5 files in other folders)
